<package format="2">
  <name>joint_state_publisher</name>
  <version>2.4.0</version>
  <description>
    This package contains a tool for setting and publishing joint state values for a given URDF.
  </description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/joint_state_publisher</url>
  <url type="repository">https://github.com/ros/joint_state_publisher</url>
  <url type="bugtracker">https://github.com/ros/joint_state_publisher/issues</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ros2topic</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
